# coinevo-mq

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  libcoinevomq.pc.in
coinevomq/: auth.cpp  auth.h  batch.h  bt_serialize.cpp  bt_serialize.h  connections.cpp  connections.h  hex.h  jobs.cpp  lokimq-internal.h  lokimq.cpp  lokimq.h  message.h  proxy.cpp  string_view.h  version.h.in  worker.cpp
tests/: CMakeLists.txt  common.h  test_batch.cpp  test_commands.cpp  test_connect.cpp  test_requests.cpp  test_string_view.cpp
